# jefferson

./: .pre-commit-config.yaml  pyproject.toml
jefferson/: jffs2.py
jefferson/compression/: jffs2_lzma_0x15.py
